--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "efrei SE testing project",
   "main": "st2tst_js.js",
   "scripts": {
+    "test-jest": "jest",
     "test": "echo \"Error: no test specified\" && exit 1",
     "perf": "docker run -it --rm -v /home/louisinger/code/efrei-testing-project/test/performance/conf:/opt/gatling/conf -v /home/louisinger/code/efrei-testing-project/test/performance/user-files:/opt/gatling/user-files -v /home/louisinger/code/efrei-testing-project/test/performance/results:/opt/gatling/results denvazh/gatling"
   },
