--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/louisinger/efrei-testing-project#readme",
   "devDependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
     "gatlingjs": "0.0.7",
-    "jest": "^24.9.0"
+    "jest": "^24.9.0",
+    "jquery": "^3.4.1"
   }
 }
