--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/louisinger/efrei-testing-project#readme",
   "devDependencies": {
+    "chai": "^4.2.0",
     "gatlingjs": "0.0.7",
     "jest": "^24.9.0"
   }
